--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -8,7 +8,9 @@
                 name="blogDataItem"
                 type="com.ersinberkealemdaroglu.tripplanapp.domain.model.travelmodel.TravelModelItem" />
     </data>
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,6 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_300sdp"
                 android:scaleType="fitXY"
+                android:downloadImageUrl="@{blogDataItem.images[0].url}"
                 app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize8Percent_detail"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -40,12 +43,14 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="359dp"
+            android:layout_height="168dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp"
             android:text="@{blogDataItem.description}"
+            app:layout_constraintBottom_toTopOf="@+id/addBookmarkButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView8"
@@ -87,18 +92,29 @@
             android:id="@+id/addBookmarkButton"
             android:layout_width="@dimen/_260sdp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="64dp"
             android:backgroundTint="@color/detail_button_background_color"
             android:padding="@dimen/_15sdp"
             android:text="Add Bookmark"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/ghostImage"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.49"
+            app:layout_constraintHorizontal_bias="0.493"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints" />
 
+        <ImageView
+            android:id="@+id/ghostImage"
+            android:layout_width="410dp"
+            android:layout_height="@dimen/_80sdp"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.476"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="ContentDescription" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
