--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
     app:startDestination="@id/homeFragment">
 
     <fragment
         android:id="@+id/homeFragment"
+        tools:layout="@layout/fragment_home"
         android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.home.HomeFragment"
         android:label="HomeFragment" >
         <action
@@ -14,6 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
+        tools:layout="@layout/fragment_search"
         android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.search.SearchFragment"
         android:label="SearchFragment" >
         <action
@@ -22,6 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
+        tools:layout="@layout/fragment_detail"
         android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.detail.DetailFragment"
         android:label="DetailFragment" >
         <argument
@@ -30,6 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/guideFragment"
+        tools:layout="@layout/fragment_guide"
         android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.guide.GuideFragment"
         android:label="GuideFragment" >
         <action
@@ -41,10 +46,12 @@
     </fragment>
     <fragment
         android:id="@+id/tripScreenFragment"
+        tools:layout="@layout/fragment_trip_screen"
         android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.trip.TripScreenFragment"
         android:label="TripScreenFragment" />
     <fragment
         android:id="@+id/guideSeeAllFragment"
+        tools:layout="@layout/fragment_guide_see_all"
         android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.guide.GuideSeeAllFragment"
         android:label="GuideSeeAllFragment" >
         <action
@@ -53,10 +60,21 @@
     </fragment>
     <fragment
         android:id="@+id/bookmarkFragment"
-        android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.trip.BookmarkFragment"
+        tools:layout="@layout/fragment_bookmark"
+        android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.trip.bookmark.BookmarkFragment"
         android:label="BookmarkFragment" >
         <action
             android:id="@+id/action_bookmarkFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/tripsBookmarkFragment"
+        tools:layout="@layout/fragment_trips"
+        android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.trip.tripbookmark.TripsBookmarkFragment"
+        android:label="TripsBookmarkFragment" />
+    <dialog
+        android:id="@+id/tripBottomSheet"
+        tools:layout="@layout/trip_bottom_sheet"
+        android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.bottomsheet.TripBottomSheet"
+        android:label="TripBottomSheet" />
 </navigation>
