Search bar added. Design fix. Bug Fix.

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -44,13 +44,11 @@
         <TextView
             android:id="@+id/textView"
             android:layout_width="359dp"
-            android:layout_height="168dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="10dp"
             android:text="@{blogDataItem.description}"
-            app:layout_constraintBottom_toTopOf="@+id/addBookmarkButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView8"
@@ -92,6 +90,7 @@
             android:id="@+id/addBookmarkButton"
             android:layout_width="@dimen/_260sdp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:backgroundTint="@color/detail_button_background_color"
             android:padding="@dimen/_15sdp"
             android:text="Add Bookmark"
@@ -101,6 +100,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.493"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:ignore="MissingConstraints" />
 
         <ImageView
