--- a/app/src/main/res/layout/category_item_guide.xml
+++ b/app/src/main/res/layout/category_item_guide.xml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <Button
-        android:id="@+id/filledButton"
+    <data>
+            <variable
+                name="guideCategory"
+                type="com.ersinberkealemdaroglu.tripplanapp.domain.model.guidecategory.GuideCategoryItem" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:background="@drawable/category_button_shape"
-        android:fontFamily="@font/source_sans_pro_bold"
-        android:text="Filled button"
-        android:layout_margin="@dimen/_3sdp"
-        android:textColor="@color/category_title_color"
-        app:backgroundTint="@null"
-        app:icon="@drawable/category_test_icon"
+        android:layout_height="wrap_content">
 
-        app:iconTint="@color/category_title_color"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/filledButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@drawable/category_button_shape"
+            android:fontFamily="@font/source_sans_pro_bold"
+            android:text="@{guideCategory.title}"
+            android:layout_margin="@dimen/_3sdp"
+            android:textColor="@color/category_title_color"
+            app:backgroundTint="@null"
+            app:icon="@drawable/category_test_icon"
+            tools:text="Guide Category"
+            app:iconTint="@color/category_title_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
