--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -42,13 +42,12 @@
             android:layout_marginTop="@dimen/_15sdp"
             android:layout_marginEnd="16dp"
             android:descendantFocusability="blocksDescendants"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:ellipsize="end"
             android:textColorHint="@color/car_ui_text_color_hint"
             android:fontFamily="@font/source_sans_pro"
             android:textSize="@dimen/_16ssp"
             android:hint="@string/where_next"
+            android:imeOptions="actionSearch"
             app:endIconTint="@color/search_bar_icon_color"
             android:background="@drawable/search_bar_background"
             android:drawableEnd="@drawable/ic_search_bar_icon"
