--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,6 +22,9 @@
         <action
             android:id="@+id/action_searchFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
+        <action
+            android:id="@+id/action_searchFragment_to_searchListFragment"
+            app:destination="@id/searchListFragment" />
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
@@ -31,6 +34,9 @@
         <argument
             android:name="blogData"
             app:argType="com.ersinberkealemdaroglu.tripplanapp.domain.model.travelmodel.TravelModelItem" />
+        <action
+            android:id="@+id/action_detailFragment_to_imageFullSize"
+            app:destination="@id/imageFullSize" />
     </fragment>
     <fragment
         android:id="@+id/guideFragment"
@@ -43,6 +49,9 @@
         <action
             android:id="@+id/action_guideFragment_to_guideSeeAllFragment"
             app:destination="@id/guideSeeAllFragment" />
+        <action
+            android:id="@+id/action_guideFragment_to_searchListFragment"
+            app:destination="@id/searchListFragment" />
     </fragment>
     <fragment
         android:id="@+id/tripScreenFragment"
@@ -77,4 +86,26 @@
         tools:layout="@layout/trip_bottom_sheet"
         android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.bottomsheet.TripBottomSheet"
         android:label="TripBottomSheet" />
+    <fragment
+        android:id="@+id/imageFullSize"
+        tools:layout="@layout/detail_image_full_size"
+        android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.detail.ImageFullSize"
+        android:label="ImageFullSize" >
+        <argument
+            android:name="fullImageSize"
+            app:argType="com.ersinberkealemdaroglu.tripplanapp.domain.model.travelmodel.TravelModelItem" />
+    </fragment>
+    <dialog
+        android:id="@+id/searchListFragment"
+        android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.search.search.SearchListFragment"
+        android:label="fragment_search_list"
+        tools:layout="@layout/fragment_search_list" >
+        <argument
+            android:name="searchString"
+            app:argType="string"
+            android:defaultValue="Berke" />
+        <action
+            android:id="@+id/action_searchListFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </dialog>
 </navigation>
