--- a/app/src/main/res/layout/fragment_guide.xml
+++ b/app/src/main/res/layout/fragment_guide.xml
@@ -56,6 +56,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="@dimen/_15sdp"
                     android:layout_marginEnd="16dp"
+                    android:autofillHints=""
                     android:background="@drawable/search_bar_background"
                     android:descendantFocusability="blocksDescendants"
                     android:drawableEnd="@drawable/ic_search_bar_icon"
@@ -64,7 +65,7 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:fontFamily="@font/source_sans_pro"
-                    android:hint="A country, a city, a place... or anything "
+                    android:hint="@string/a_country_a_city_a_place_or_anything"
                     android:imeOptions="actionSearch"
                     android:inputType="text"
                     android:maxLines="1"
