--- a/app/src/main/res/layout/fragment_guide_see_all.xml
+++ b/app/src/main/res/layout/fragment_guide_see_all.xml
@@ -9,12 +9,11 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/textView3"
