--- a/app/src/main/res/layout/top_pick_articles_item.xml
+++ b/app/src/main/res/layout/top_pick_articles_item.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-            <variable
-                name="blogDataItem"
-                type="com.ersinberkealemdaroglu.tripplanapp.domain.model.travelmodel.TravelModelItem" />
+
+        <variable
+            name="blogDataItem"
+            type="com.ersinberkealemdaroglu.tripplanapp.domain.model.travelmodel.TravelModelItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,11 +17,11 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="@dimen/_210sdp"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_3sdp"
             android:clickable="true"
             android:focusable="true"
             android:minHeight="148dp"
             app:cardCornerRadius="@dimen/_8sdp"
-            android:layout_margin="@dimen/_3sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,8 +39,8 @@
                     android:background="@android:color/transparent"
                     android:backgroundTint="@color/material_on_surface_emphasis_medium"
                     android:backgroundTintMode="add"
-                    android:downloadImageUrl="@{blogDataItem.images[0].url}"
                     android:contentDescription="@string/card_image"
+                    android:downloadImageUrl="@{blogDataItem.images[0].url}"
                     android:scaleType="centerCrop"
                     android:src="@drawable/top_pick_articles_test_image" />
 
@@ -48,10 +49,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_8sdp"
                     android:layout_marginTop="@dimen/_9sdp"
-                    android:textAllCaps="true"
                     android:fontFamily="@font/source_sans_pro_bold"
                     android:lineHeight="@dimen/_17sdp"
                     android:text="@{blogDataItem.category}"
+                    android:textAllCaps="true"
                     android:textColor="@color/guide_blue_color"
                     android:textFontWeight="600"
                     android:textSize="@dimen/_14ssp"
@@ -61,8 +62,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_8sdp"
-                    android:layout_marginEnd="@dimen/_8sdp"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_8sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:fontFamily="@font/source_sans_pro_bold"
                     android:lineHeight="@dimen/_22ssp"
@@ -84,8 +85,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
-                    android:foreground="?android:attr/selectableItemBackground"
                     android:background="@android:color/transparent"
+                    android:foreground="?android:attr/selectableItemBackground"
                     android:src="@drawable/ic_bookmark_icon"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
